--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,8 @@ name = "pypi"
 google-api-python-client = "*"
 python-dotenv = "*"
 python-dateutil = "*"
+requests = "*"
+python-ulid = "*"
 
 [dev-packages]
 
